--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -17,5 +17,6 @@
   "logoutConfirmation": "Are you sure you want to log out?",
   "logoutConfirmationDescription": "All your conversations will be deleted from the local database, you will be able to restore only messages for the last 14 days when you log in next time",
   "confirm": "Confirm",
-  "cancel": "Cancel"
+  "cancel": "Cancel",
+  "unhandledError": "Session web ran into a problem that it couldn't handle, and now the page needs to be reloaded."
 }
