--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -17,5 +17,6 @@
   "logoutConfirmation": "Вы уверены, что хотите выйти?",
   "logoutConfirmationDescription": "Все ваши диалоги будут удалены из локальной базы данных, при следующем входе вы сможете восстановить лишь сообщения за последние 14 дней",
   "confirm": "Подтвердить",
-  "cancel": "Отмена"
+  "cancel": "Отмена",
+  "error": "В Session web произошла ошибка, и теперь страницу необходимо перезагрузить."
 }
