--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -19,5 +19,7 @@
   "confirm": "Confirm",
   "cancel": "Cancel",
   "unhandledError": "Session web ran into a problem that it couldn't handle, and now the page needs to be reloaded.",
-  "messageOutgoingPrefix": "You: "
+  "messageOutgoingPrefix": "You: ",
+  "inboxTitle": "Inbox",
+  "today": "Today"
 }
