--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -18,8 +18,10 @@
   "logoutConfirmationDescription": "Все ваши диалоги будут удалены из локальной базы данных, при следующем входе вы сможете восстановить лишь сообщения за последние 14 дней",
   "confirm": "Подтвердить",
   "cancel": "Отмена",
-  "error": "В Session web произошла ошибка, и теперь страницу необходимо перезагрузить.",
+  "unhandledError": "В Session web произошла ошибка, и теперь страницу необходимо перезагрузить.",
   "messageOutgoingPrefix": "Вы: ",
   "inboxTitle": "Сообщения",
-  "today": "Today"
+  "today": "Сегодня",
+  "typeMessagePlaceholder": "Сообщение...",
+  "storeMessageError": "Не удалось отправить сообщение",
 }
