Add stored messages syncing

--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -23,5 +23,5 @@
   "inboxTitle": "Сообщения",
   "today": "Сегодня",
   "typeMessagePlaceholder": "Сообщение...",
-  "storeMessageError": "Не удалось отправить сообщение",
+  "storeMessageError": "Не удалось отправить сообщение"
 }
