--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -31,5 +31,6 @@
   "recipient": "Recipient",
   "aboutOns": "View and register ONS names",
   "onsInvalid": "ONS name not found",
-  "unsupportedLegacyOns": "This ONS has legacy format which is unsupported at the moment"
+  "unsupportedLegacyOns": "This ONS has legacy format which is unsupported at the moment",
+  "indexedDbNotAvailable": "Your browser does not support IndexedDB, so data will not be saved when the page is reloaded. Please use another browser or allow the use of IndexedDB in the settings (dom.indexedDB.privateBrowsing.enabled = true on the about:config page for Tor)."
 }
