--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -32,5 +32,7 @@
   "aboutOns": "Просмотр и регистрация ONS имен",
   "onsInvalid": "Не удалось найти ONS имя",
   "unsupportedLegacyOns": "Этот ONS имеет старый формат, который пока не поддерживается",
-  "indexedDbNotAvailable": "Ваш браузер не поддерживает IndexedDB, поэтому данные не будут сохранены при перезагрузке страницы. Пожалуйста, используйте другой браузер или разрешите использование IndexedDB в настройках (dom.indexedDB.privateBrowsing.enabled = true на странице about:config для Tor)."
+  "indexedDbNotAvailable": "Ваш браузер не поддерживает IndexedDB, поэтому данные не будут сохранены при перезагрузке страницы. Пожалуйста, используйте другой браузер или разрешите использование IndexedDB в настройках (dom.indexedDB.privateBrowsing.enabled = true на странице about:config для Tor).",
+  "clearDb": "Перезагрузка не помогает? Нажмите, чтобы стереть базу данных",
+  "clearDbWarning": "ВНИМАНИЕ: Нажатие ОК удалит локальную базу данных. Вы можете сделать резервную копию вашей последней использованной мнемоники (семени) восстановления фразы, закрыв это всплывающее окно кнопкой Отмена, затем открыв DevTools -> Application -> localStorage -> 'persist:root'"
 }
